# Gorbunov

./: CMakeLists.txt  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  DatabaseConnection.cpp  DatabaseConnection.h  Employee.cpp  Employee.h  EmployeeDatabase.cpp  EmployeeDatabase.h  README.md  SETUP.md
